fixed broken route and margin between buttons on mobile device

--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -1,3 +1,5 @@
+@import "responsive-utils";
+
 body {
   font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
 
@@ -105,6 +107,10 @@ p {
 .topic {
   border: 1px solid #ddd;
   margin: 1em 0.5em 2em;
+
+  @media (max-width: @screen-xs-max) {
+    margin: 1em 0.5em 0em;
+  }
 }
 
 /*
@@ -152,6 +158,8 @@ p {
   font-size: 1em;
   font-weight: normal;
 
+  @media (max-width: @screen-xs-max) {
+  }
 }
 
 .topic-box-icon {
